tests/ui/derives/derives-span-PartialEq-enum-struct-variant.stderr
error[E0369]: binary operation `==` cannot be applied to type `Error`
  --> $DIR/derives-span-PartialEq-enum-struct-variant.rs:9:6
   |
LL | #[derive(PartialEq)]
   |          --------- in this derive macro expansion
...
LL |      x: Error
   |      ^^^^^^^^
   |
note: an implementation of `PartialEq` might be missing for `Error`
  --> $DIR/derives-span-PartialEq-enum-struct-variant.rs:4:1
   |
LL | struct Error;
   | ^^^^^^^^^^^^ must implement `PartialEq`
   = note: this error originates in the derive macro `PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Error` with `#[derive(PartialEq)]`
   |
LL + #[derive(PartialEq)]
LL | struct Error;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
